# dsi

./: Cargo.toml  LICENSE  dsi-architecture.md
src/: main.rs  paths.rs  platform.rs
src/api/: client.rs  models.rs
src/commands/: info.rs  install.rs  ls.rs  ls_remote.rs  mod.rs
