[package]
name = "dsi"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
  "stream",
], default-features = false }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "io-util",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3"
indicatif = "0.18"
dirs = "6"
sha2 = "0.11"
hex = "0.4"
flate2 = "1"
tar = "0.4"
zip = "8"
anyhow = "1"
futures-util = "0.3"
